--- a/k8s/redis-demo/deployment.yaml
+++ b/k8s/redis-demo/deployment.yaml
@@ -35,3 +35,12 @@ spec:
         env:
         - name: REDIS_HOST
           value: 'redis:6379'
+#      - name: webapp
+#        image: training/webapp
+#        resources:
+#          requests:
+#            cpu: "0.2"
+#            memory: "128Mi"
+#          limits:
+#            cpu: "0.5"
+#            memory: "256Mi"
